fix hamburger menu collapse display

--- a/src/static/scss/layout/_dashboard.scss
+++ b/src/static/scss/layout/_dashboard.scss
@@ -53,7 +53,6 @@
   @extend .d-md-block;
   @extend .bg-light;
   @extend .collapse; 
-  @extend .show;
 
   &__sticky {
     @extend .position-sticky;
